--- a/index.html
+++ b/index.html
@@ -94,70 +94,77 @@
             <div class="wrapper">
                 <h2>Things to Install:</h2>
                 <div class="apps">
-                    <div class="col-4">
-                        <a href="https://librewolf.net/" target="_blank"><img
-                                src="https://librewolf.net/icon.svg"
-                                alt="librewolf logo" class="img-fluid img-circle"></a>
-                        <a href="https://librewolf.net/" target="_blank">
-                            <p>LibreWolf // Brave</p>
-                        </a>
-                    </div>
-                    <div class="col-4">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/UBlock_Origin.svg/1200px-UBlock_Origin.svg.png" alt="ublock origin logo" class="img-fluid img-circle">
-                        <p>Ublock Origin</p>
-                    </div>
-                    <div class="col-4">
-                        <a href="https://bitwarden.com/" target="_blank"><img src="https://yt3.googleusercontent.com/hG462y2Jk7qiFcaHn54XJBXBoUrvMd79D1M6m-AglbBkP0oAMzTps5hfTTRz7ijwMaNN1Mhu8nY=s900-c-k-c0x00ffffff-no-rj" alt="bitwarden logo" class="img-fluid img-circle"></a>
-                        <a href="https://bitwarden.com/" target="_blank"><p>Bitwarden</p></a>
-                    </div>
-                    <div class="col-4">
-                        <a href="https://privacybadger.org/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/1/13/PrivacyBadgerLogo.svg" alt="privacy badger logo" class="img-fluid img-circle"></a>
-                        <a href="https://privacybadger.org/" target="_blank"><p>Privacy Badger</p></a>
-                    </div>
-                    <div class="col-4">
-                        <img src="https://addons.mozilla.org/user-media/addon_icons/812/812521-64.png?modified=1741352445" alt="U-A S logo"
-                            class="img-fluid img-circle">
-                        <p>User-Agent Switcher</p>
-                    </div>
-                    <div class="col-4">
-                        <img src="https://camo.githubusercontent.com/a05980706845d1a726a5b3a300084abcd6aa1e735ba75d05642b60f13cbda705/68747470733a2f2f6769746c61622e636f6d2f436c65617255524c732f436c65617255726c732f7261772f6d61737465722f696d672f636c65617275726c732e737667" alt="Clear-URLs logo"
-                            class="img-fluid img-circle">
-                        <p>Clear URLs</p>
-                    </div>
-                    <div class="col-4">
-                        <a href="https://proton.me/mail" target="_blank">
-                            <img
-                                src="https://play-lh.googleusercontent.com/lTYn9-xTiMjcbklN0bHBnNs17ChOkWP5SVU5se-GC7XWBLph_o4Ne7U2IMyu14GLIHFM"
-                                alt="Proton Mail logo"
-                                class="img-fluid img-circle">
+                    <div class="row">
+                        <div class="col-4">
+                            <a href="https://librewolf.net/" target="_blank"><img src="https://librewolf.net/icon.svg" alt="librewolf logo"
+                                    class="img-fluid img-circle"></a>
+                            <a href="https://librewolf.net/" target="_blank">
+                                <p>LibreWolf // Brave</p>
                             </a>
-                        <a href="https://proton.me/mail" target="_blank">
-                            <p>Proton Mail</p>
-                        </a>
-                    </div>
-                    <div class="col-4">
-                        <a href="https://protonvpn.com/" target="_blank">
-                            <img
-                                src="https://cdn.worldvectorlogo.com/logos/proton-vpn-1.svg"
-                                alt="Proton VPN logo"
-                                class="img-fluid img-circle">
+                        </div>
+                        <div class="col-4">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/UBlock_Origin.svg/1200px-UBlock_Origin.svg.png"
+                                alt="ublock origin logo" class="img-fluid img-circle">
+                            <p>Ublock Origin</p>
+                        </div>
+                        <div class="col-4">
+                            <a href="https://bitwarden.com/" target="_blank"><img
+                                    src="https://yt3.googleusercontent.com/hG462y2Jk7qiFcaHn54XJBXBoUrvMd79D1M6m-AglbBkP0oAMzTps5hfTTRz7ijwMaNN1Mhu8nY=s900-c-k-c0x00ffffff-no-rj"
+                                    alt="bitwarden logo" class="img-fluid img-circle"></a>
+                            <a href="https://bitwarden.com/" target="_blank">
+                                <p>Bitwarden</p>
                             </a>
-                        <a href="https://protonvpn.com/" target="_blank">
-                            <p>Proton VPN</p>
-                        </a>
+                        </div>
                     </div>
-                    <div class="col-4">
-                        <a href="https://temp-mail.org/en/" target="_blank">
-                            <img
-                                src="https://play-lh.googleusercontent.com/Mz0NTKKDJJwzl9zcg4261ahxnV-Df9Mylp46JnZzUZcRtS51gstbNVIOMar3a7UgThk"
-                                alt="Temp Email Logo"
-                                class="img-fluid img-circle">
+                    <div class="row">
+                        <div class="col-4">
+                            <a href="https://privacybadger.org/" target="_blank"><img
+                                    src="https://upload.wikimedia.org/wikipedia/commons/1/13/PrivacyBadgerLogo.svg" alt="privacy badger logo"
+                                    class="img-fluid img-circle"></a>
+                            <a href="https://privacybadger.org/" target="_blank">
+                                <p>Privacy Badger</p>
                             </a>
-                        <a href="https://temp-mail.org/en/" target="_blank">
-                            <p>Temp Email</p>
-                        </a>
+                        </div>
+                        <div class="col-4">
+                            <img src="https://addons.mozilla.org/user-media/addon_icons/812/812521-64.png?modified=1741352445" alt="U-A S logo"
+                                class="img-fluid img-circle">
+                            <p>User-Agent Switcher</p>
+                        </div>
+                        <div class="col-4">
+                            <img src="https://camo.githubusercontent.com/a05980706845d1a726a5b3a300084abcd6aa1e735ba75d05642b60f13cbda705/68747470733a2f2f6769746c61622e636f6d2f436c65617255524c732f436c65617255726c732f7261772f6d61737465722f696d672f636c65617275726c732e737667"
+                                alt="Clear-URLs logo" class="img-fluid img-circle">
+                            <p>Clear URLs</p>
+                        </div>
                     </div>
-
+                    <div class="row">
+                        <div class="col-4">
+                            <a href="https://protonvpn.com/" target="_blank">
+                                <img src="https://cdn.worldvectorlogo.com/logos/proton-vpn-1.svg" alt="Proton VPN logo"
+                                    class="img-fluid img-circle">
+                            </a>
+                            <a href="https://protonvpn.com/" target="_blank">
+                                <p>Proton VPN</p>
+                            </a>
+                        </div>
+                        <div class="col-4">
+                            <a href="https://temp-mail.org/en/" target="_blank">
+                                <img src="https://play-lh.googleusercontent.com/Mz0NTKKDJJwzl9zcg4261ahxnV-Df9Mylp46JnZzUZcRtS51gstbNVIOMar3a7UgThk"
+                                    alt="Temp Email Logo" class="img-fluid img-circle">
+                            </a>
+                            <a href="https://temp-mail.org/en/" target="_blank">
+                                <p>Temp Email</p>
+                            </a>
+                        </div>
+                        <div class="col-4">
+                            <a href="https://proton.me/mail" target="_blank">
+                                <img src="https://play-lh.googleusercontent.com/lTYn9-xTiMjcbklN0bHBnNs17ChOkWP5SVU5se-GC7XWBLph_o4Ne7U2IMyu14GLIHFM"
+                                    alt="Proton Mail logo" class="img-fluid img-circle">
+                            </a>
+                            <a href="https://proton.me/mail" target="_blank">
+                                <p>Proton Mail</p>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
