--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <li>Do you use Privacy Badger or a cookie deleter? 1pt</li>
                         <li>Do you have User-Agent Switcher or a browser spoofer? 1pt</li>
                         <li>What does the Electronic Frontier Foundation think of your browser? - <a
-                                href="https://firstpartysimulator.org/"> EFF Browser Tester</a> x/3pts
+                                href="https://firstpartysimulator.org/" target="_blank"> EFF Browser Tester</a> x/3pts
                             <ul>
                                 <li>You have no protection - 1pt</li>
                                 <li>You have some protection - 2pts</li>
@@ -83,7 +83,7 @@
                     <h3>Extra Credit:</h3>
                     <ul>
                         <li>Have you been pwned? - <a href="https://haveibeenpwned.com/" target="_blank">Have I Been Pwned?</a> 1pt</li>
-                        <li>Watch this video - <a href="https://youtu.be/HTkdwnwAqlg?si=cr-HZZckB7XfmhLL">Bank Makes MV to Promote Phishing Awareness</a> 1pt</li>
+                        <li>Watch this video - <a href="https://youtu.be/HTkdwnwAqlg?si=cr-HZZckB7XfmhLL" target="_blank">Bank Makes MV to Promote Phishing Awareness</a> 1pt</li>
                     </ul>
                 </div>
                 <h3>What Was Your Score?:   </h3>
